--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -66,10 +66,18 @@
     background: #00a26c; !important
   
   }
-
-
-
-
+  .header .header-inbox-link{
+      margin: -2px 0 0;
+  }
+  
+  .header .header-text-link {
+        height: auto;
+      line-height: 27px;
+  
+  }
+  .header .header-user-toggle .header-user-mobile-anchor img {
+    height: 24px;
+  }
 
 
 
