--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -66,16 +66,16 @@
     background: #00a26c; !important
   
   }
-  .header .header-inbox-link{
-      margin: -2px 0 0;
+  .header.header-inbox-link{
+    margin: -2px 0 0;
   }
   
-  .header .header-text-link {
-        height: auto;
-      line-height: 27px;
+  .header.header-text-link {
+    height: auto;
+    line-height: 27px;
   
   }
-  .header .header-user-toggle .header-user-mobile-anchor img {
+  .va_h_image{
     height: 24px;
   }
 
