--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -63,11 +63,10 @@
 
 :css
   .vA_h_simulator{
-    background: #00a26c; !important
-  
+    background: #00a26c !important;
   }
   .header.header-inbox-link{
-    margin: -2px 0 0;
+    margin: -2px 0 0 !important;
   }
   
   .header.header-text-link {
