--- a/app/views/layouts/_header_right_visible_tablet.haml
+++ b/app/views/layouts/_header_right_visible_tablet.haml
@@ -1,4 +1,4 @@
-.header-right.visible-tablet
+.header-right.visible-tablet.no_margin_va
   = link_to inbox_path, title: t("layouts.conversations.messages"), :id => "inbox-link", :class => "header-text-link header-hover header-inbox-link" do
     = icon_map_tag(icons, "mail", ["header-inbox"])
     - if unread_count > 0
