--- a/app/views/layouts/_header_anchors.haml
+++ b/app/views/layouts/_header_anchors.haml
@@ -2,7 +2,7 @@
   .header-user-toggle.header-hover.toggle{data: {toggle: '#header-user-toggle-menu', 'toggle-anchor-position' => 'right', 'toggle-position' => 'absolute'}}
     #header-user-mobile-anchor
       .left
-        = image_tag avatar_url, alt: '', class: '' #header-user-avatar
+        = image_tag avatar_url, alt: '', class: 'va_h_image' 
       .left
         %span.header-text-link
           %span#header-user-display-name.visible-tablet-inline
