--- a/app/views/listings/form/_price.haml
+++ b/app/views/listings/form/_price.haml
@@ -1,6 +1,6 @@
 .price-container
   - if shape[:price_enabled]
-    = form.label :price, t(".price")
+    = form.label :price, 'Unit Price'
     = form.text_field :price, :class => "price-field", :maxlength => "10", :placeholder => "0", :value => (@listing.price ? @listing.price.to_s: 0)
     = render partial: "listings/form/currency_selector", locals: {form: form}
 
