--- a/app/views/layouts/_header_user_menu.haml
+++ b/app/views/layouts/_header_user_menu.haml
@@ -20,6 +20,6 @@
     = icon_map_tag(icons, "settings", ["icon-with-text"])
     = t("layouts.logged_in.settings")
 
-  = link_to logout_path do
-    = icon_map_tag(icons, "logout", ["icon-with-text"])
-    = t("layouts.logged_in.logout")
+  / = link_to logout_path do
+  /   = icon_map_tag(icons, "logout", ["icon-with-text"])
+  /   = t("layouts.logged_in.logout")
