--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -20,11 +20,11 @@
                     - conversations = @current_community.conversations.for_person(@current_user)
                     - unread_count = MarketplaceService::Inbox::Query.notification_count(@current_user.id, @current_community.id)
                     %li
-                      = link_to person_inbox_path(@current_user) do
+                      = link_to person_inbox_path(@current_user) do, :class => "count-holder"
                         = icon_tag("mail", ["icon-with-text"])
                         - if unread_count > 0
                           .mobile-badge{:class => get_badge_class(unread_count)}
-                          = unread_count
+                            = unread_count
                   %li
                     .dropdown.login-admin-profile
                       %button#dropdownMenu1.btn.btn-default.login-btn.dropdown-toggle{"aria-expanded" => "true", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
@@ -33,14 +33,6 @@
                           admin a
                           %i.icon-caret-down.icon-dropdown
                       %ul.dropdown-menu{"aria-labelledby" => "dropdownMenu1"}
-                        %li
-                          = link_to "/" do
-                            = icon_tag("home", ["icon-with-text"])
-                            = t("header.home")
-                        %li
-                          = link_to new_listing_path, :class => "hidden-tablet" do
-                            = icon_tag("new_listing", ["icon-with-text"])
-                            = t("homepage.index.post_new_listing")
                         - if @current_user
                           - Maybe(@current_user).each do |user|
                             - conversations = @current_community.conversations.for_person(user)
@@ -68,30 +60,6 @@
                             /   = link_to logout_path do
                             /     = icon_tag("logout", ["icon-with-text"])
                             /     = t("layouts.logged_in.logout")
-                        %li
-                          = link_to about_infos_path do
-                            = icon_tag("information", ["icon-with-text"])
-                            = t("header.about")
-                        %li
-                          = link_to new_user_feedback_path do
-                            = icon_tag("feedback", ["icon-with-text"])
-                            = t("header.contact_us")
-                        %li
-                          - with_invite_link do
-                            = link_to new_invitation_path do
-                              = icon_tag("invite", ["icon-with-text"])
-                              = t("header.invite")
-                        %li
-                          - Maybe(@current_community).menu_links.each do |menu_links|
-                            - menu_links.each do |menu_link|
-                              = link_to menu_link.url(I18n.locale), :target => "_blank" do
-                                = icon_tag("redirect", ["icon-with-text"])
-                                = menu_link.title(I18n.locale)
-                        %li
-                          - if @current_user && @current_community && @current_user.has_admin_rights?
-                            = link_to edit_details_admin_community_path(@current_community) do
-                              = icon_tag("admin", ["icon-with-text"])
-                              = t("layouts.logged_in.admin")
 
                   %li
                     .dropdown.login-menu 
@@ -102,37 +70,6 @@
                           = link_to "/" do
                             = icon_tag("home", ["icon-with-text"])
                             = t("header.home")
-                        %li
-                          = link_to new_listing_path, :class => "hidden-tablet" do
-                            = icon_tag("new_listing", ["icon-with-text"])
-                            = t("homepage.index.post_new_listing")
-                        - if @current_user
-                          - Maybe(@current_user).each do |user|
-                            - conversations = @current_community.conversations.for_person(user)
-                            - unread_count = MarketplaceService::Inbox::Query.notification_count(user.id, @current_community.id)
-                            %li
-                              = link_to person_inbox_path(@current_user) do
-                                = icon_tag("mail", ["icon-with-text"])
-                                = t("layouts.conversations.messages")
-                                - if unread_count > 0
-                                  .mobile-badge{:class => get_badge_class(unread_count)}
-                                  = unread_count
-                            %li
-                              = link_to person_path(user) do
-                                = icon_tag("user", ["icon-with-text"])
-                                = t("header.profile")                        
-                            %li
-                              = link_to person_path(user, :show_closed => true) do
-                                = icon_tag("list", ["icon-with-text"])
-                                = t("header.manage_listings")                         
-                            %li
-                              = link_to person_settings_path(user) do
-                                = icon_tag("settings", ["icon-with-text"])
-                                = t("layouts.logged_in.settings")
-                            / %li
-                            /   = link_to logout_path do
-                            /     = icon_tag("logout", ["icon-with-text"])
-                            /     = t("layouts.logged_in.logout")
                         %li
                           = link_to about_infos_path do
                             = icon_tag("information", ["icon-with-text"])
@@ -316,6 +253,25 @@
   .admin-menu-panel .dropdown-menu > li > a:hover  {
     background: #a64c5d;
     color: white;
+  }
+  .mobile-badge {
+    position: absolute;
+    top: -5px;
+    left: 1.4375em;
+    background: #a64c5d;
+    color: white;
+    width: 20px;
+    height: 20px;
+    line-height: 19px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  .count-holder {
+    position: relative;
   }
 
 /   #header {
