--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -25,41 +25,41 @@
                         - if unread_count > 0
                           .mobile-badge{:class => get_badge_class(unread_count)}
                           = unread_count
-                  %li
-                    .dropdown.login-admin-profile
-                      %button#dropdownMenu1.btn.btn-default.login-btn.dropdown-toggle{"aria-expanded" => "true", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
-                        %img.va_h_image{:alt => "", :src => "http://www.free-icons-download.net/images/user-icon-27998.png", :style => "width: 20px;height: 20px;"} 
-                        %span.admin-text
-                          admin a
-                          %i.icon-caret-down.icon-dropdown
-                      %ul.dropdown-menu{"aria-labelledby" => "dropdownMenu1"}
-                        - if @current_user
-                          - Maybe(@current_user).each do |user|
-                            - conversations = @current_community.conversations.for_person(user)
-                            - unread_count = MarketplaceService::Inbox::Query.notification_count(user.id, @current_community.id)
-                            %li
-                              = link_to person_inbox_path(@current_user) do
-                                = icon_tag("mail", ["icon-with-text"])
-                                = t("layouts.conversations.messages")
-                                - if unread_count > 0
-                                  .mobile-badge{:class => get_badge_class(unread_count)}
-                                  = unread_count
-                            %li
-                              = link_to person_path(user) do
-                                = icon_tag("user", ["icon-with-text"])
-                                = t("header.profile")                        
-                            %li
-                              = link_to person_path(user, :show_closed => true) do
-                                = icon_tag("list", ["icon-with-text"])
-                                = t("header.manage_listings")                         
-                            %li
-                              = link_to person_settings_path(user) do
-                                = icon_tag("settings", ["icon-with-text"])
-                                = t("layouts.logged_in.settings")
-                            / %li
-                            /   = link_to logout_path do
-                            /     = icon_tag("logout", ["icon-with-text"])
-                            /     = t("layouts.logged_in.logout")
+                    %li
+                      .dropdown.login-admin-profile
+                        %button#dropdownMenu1.btn.btn-default.login-btn.dropdown-toggle{"aria-expanded" => "true", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
+                          %img.va_h_image{:alt => "", :src => "http://www.free-icons-download.net/images/user-icon-27998.png", :style => "width: 20px;height: 20px;"} 
+                          %span.admin-text
+                            - @current_user.username
+                            %i.icon-caret-down.icon-dropdown
+                        %ul.dropdown-menu{"aria-labelledby" => "dropdownMenu1"}
+                          - if @current_user
+                            - Maybe(@current_user).each do |user|
+                              - conversations = @current_community.conversations.for_person(user)
+                              - unread_count = MarketplaceService::Inbox::Query.notification_count(user.id, @current_community.id)
+                              %li
+                                = link_to person_inbox_path(@current_user) do
+                                  = icon_tag("mail", ["icon-with-text"])
+                                  = t("layouts.conversations.messages")
+                                  - if unread_count > 0
+                                    .mobile-badge{:class => get_badge_class(unread_count)}
+                                    = unread_count
+                              %li
+                                = link_to person_path(user) do
+                                  = icon_tag("user", ["icon-with-text"])
+                                  = t("header.profile")                        
+                              %li
+                                = link_to person_path(user, :show_closed => true) do
+                                  = icon_tag("list", ["icon-with-text"])
+                                  = t("header.manage_listings")                         
+                              %li
+                                = link_to person_settings_path(user) do
+                                  = icon_tag("settings", ["icon-with-text"])
+                                  = t("layouts.logged_in.settings")
+                              / %li
+                              /   = link_to logout_path do
+                              /     = icon_tag("logout", ["icon-with-text"])
+                              /     = t("layouts.logged_in.logout")
 
                   %li
                     .dropdown.login-menu 
