Inbox notification bug fix

--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -171,6 +171,22 @@
   ul{
     list-style-type: none;
   }
+  .mobile-badge{  
+    position: relative;
+    top: -11px;
+    left: 12px;
+    background: #a64c5d;
+    color: white;
+    width: 19px;
+    height: 19px;
+    line-height: 19px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    text-align: center;
+  }
   .login-admin-profile {
     display: table !Important;
     width: 96%;
