--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -49,10 +49,6 @@
                                   = icon_tag("user", ["icon-with-text"])
                                   = t("header.profile")                        
                               %li
-                                = link_to person_path(user, :show_closed => true) do
-                                  = icon_tag("list", ["icon-with-text"])
-                                  = t("header.manage_listings")                         
-                              %li
                                 = link_to person_settings_path(user) do
                                   = icon_tag("settings", ["icon-with-text"])
                                   = t("layouts.logged_in.settings")
@@ -94,7 +90,11 @@
                             = link_to edit_details_admin_community_path(@current_community) do
                               = icon_tag("admin", ["icon-with-text"])
                               = t("layouts.logged_in.admin")
-
+                  - Maybe(@current_user).each do |user|
+                    %li
+                      = link_to person_path(user, :show_closed => true) do
+                        %button.btn.btn-md.pull-right.menu_btn_amzonLyout{:type => "button"}
+                          Manage Listings                      
                   %li
                     = link_to new_listing_path do
                       %button.btn.btn-md.pull-right.menu_btn_amzonLyout{:type => "button"}
