--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -10,7 +10,7 @@
       #header-menu-desktop-anchor.header-menu-container.toggle.hidden{data: {toggle: '#header-menu-toggle-menu', 'toggle-position' => 'absolute'}}
 
     - if logged_in
-      .header-right.no_margin_va{:style => "margin-right: 274px;"}
+      .header-right.no_margin_va{:style => "margin-right: 254px;"}
         = render :partial => "layouts/header_anchors", locals: {avatar_url: avatar_url, current_user_name: current_user_name, icons: icons}
         = render :partial => "layouts/header_user_menu", locals: {unread_count: unread_count, inbox_path: inbox_path, profile_path: profile_path, manage_listings_path: manage_listings_path, settings_path: settings_path, logout_path: logout_path, icons: icons}
 
@@ -81,7 +81,9 @@
   .no_margin_va{
     margin-top: -15px;
   }
-
+  #new-listing-link{
+    margin-right: -59px;
+  }
 
 
 
