--- a/app/views/layouts/_header_user_menu.haml
+++ b/app/views/layouts/_header_user_menu.haml
@@ -12,9 +12,9 @@
     = icon_map_tag(icons, "user", ["icon-with-text"])
     = t("header.profile")
 
-  = link_to manage_listings_path do
-    = icon_map_tag(icons, "list", ["icon-with-text"])
-    = t("header.manage_listings")
+  / = link_to manage_listings_path do
+  /   = icon_map_tag(icons, "list", ["icon-with-text"])
+  /   = t("header.manage_listings")
 
   = link_to settings_path do
     = icon_map_tag(icons, "settings", ["icon-with-text"])
